--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="thailand.html" class="dropdown-item">Thailand</a>
-                                            <a href="#" class="dropdown-item">Singapoor</a>
+                                            <a href="singapoor.html" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
                                 </div>
