--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="thailand.html" class="dropdown-item">Thailand</a>
-                                            <a href="singapoor.html" class="dropdown-item">Singapoor</a>
+                                            <a href="singapoor.html0" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
                                 </div>
@@ -310,18 +310,37 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="rounded overflow-hidden mb-2">
+                        <img class="img-fluid" src="img/stock-market.jpg" alt="">
+                        <div class="bg-secondary p-4">
+                            <div class="d-flex justify-content-between mb-3">
+                                <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
+                            </div>
+                            <a class="h5" href="">Stock-Market</a>
+                            <div class="border-top mt-4 pt-4">
+                                <div class="d-flex justify-content-between">
+                                    <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
+                                    </h6>
+                                    <h5 class="m-0"></h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="rounded overflow-hidden mb-2">
                         <img class="img-fluid" src="img/web design.jpg" alt="">
                         <div class="bg-secondary p-4">
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
-                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <a class="h5" href="">Web design & development courses for beginner</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
-                                    <h5 class="m-0">$99</h5>
+                                    <h5 class="m-0"></h5>
                                 </div>
                             </div>
                         </div>
@@ -333,14 +352,14 @@
                         <div class="bg-secondary p-4">
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
-                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <a class="h5" href="">Java Full-Stack Course in Core & Advanced Java</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
-                                    <h5 class="m-0">$99</h5>
+                                    <h5 class="m-0"></h5>
                                 </div>
                             </div>
                         </div>
@@ -352,14 +371,14 @@
                         <div class="bg-secondary p-4">
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
-                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <a class="h5" href="">Data Science With Python</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
-                                    <h5 class="m-0">$99</h5>
+                                    <h5 class="m-0"></h5>
                                 </div>
                             </div>
                         </div>
@@ -371,14 +390,14 @@
                         <div class="bg-secondary p-4">
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
-                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <a class="h5" href="">Data Analytics With Python & Sql </a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
-                                    <h5 class="m-0">$99</h5>
+                                    <h5 class="m-0"></h5>
                                 </div>
                             </div>
                         </div>
@@ -390,37 +409,37 @@
                         <div class="bg-secondary p-4">
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
-                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <a class="h5" href="">Stock-Market</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
-                                    <h5 class="m-0">$99</h5>
+                                    <h5 class="m-0"></h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="rounded overflow-hidden mb-2">
+                    <!-- <div class="rounded overflow-hidden mb-2">
                         <img class="img-fluid" src="img/tourst.jpg" alt="">
                         <div class="bg-secondary p-4">
                             <div class="d-flex justify-content-between mb-3">
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
-                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i>01h 30m</small>
+                                <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <a class="h5" href="">Tourism Packegs</a>
                             <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
-                                    <h5 class="m-0">$99</h5>
+                                    <h5 class="m-0"></h5>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
