--- a/thailand.html
+++ b/thailand.html
@@ -155,15 +155,7 @@
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/carousel-1.jpg" alt="Image">
-                        <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
-                            oneself in a new culture, learn a new language, and gain a unique perspective on the world.
-                            Additionally, studying abroad can enhance one's academic and professional prospects by
-                            providing access to top-notch educational institutions and networking opportunities.
-                            However, it is important to carefully research and plan for a study abroad experience to
-                            ensure a successful and safe journey. Factors to consider include the destination country's
-                            culture, language, safety, and visa requirements, as well as the academic program and cost.
-                            With proper preparation and an open mind, studying abroad can be an incredibly rewarding
-                            adventure that broadens one's horizons and enriches one's life.</p>
+                        <p>Thailand,officially the Kingdom of Thailand and historically known as Siam, is a country in Southeast Asia on the Indochinese Peninsula. With a population of almost 70 million,it spans 513,120 square kilometres (198,120 sq mi). Thailand is bordered to the northwest by Myanmar, to the northeast by Laos, to the southeast by Cambodia, to the south by the Gulf of Thailand and Malaysia, and to the southwest by the Andaman Sea; it also shares maritime borders with Vietnam to the southeast, and Indonesia and India to the southwest. Bangkok is the nation's capital and largest city.</p>
                         <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
                         <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
                         <p>If you are interested in a career that combines finance with technology, then pursuing
@@ -254,24 +246,24 @@
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study In Singapore</a>
-                                <span class="badge badge-primary badge-pill">150</span>
+                                <a href="" class="text-decoration-none h6 m-0">3 Nights in pattaya</a>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study in Cyprus</a>
-                                <span class="badge badge-primary badge-pill">131</span>
+                                <a href="" class="text-decoration-none h6 m-0">Bangkok</a>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in France</a>
-                                <span class="badge badge-primary badge-pill">78</span>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in Ireland</a>
-                                <span class="badge badge-primary badge-pill">56</span>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
-                                <span class="badge badge-primary badge-pill">98</span>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                         </ul>
                     </div>
