--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="cat-item position-relative overflow-hidden rounded mb-2">
                         <img class="img-fluid" src="img/services/visa.jpg" alt="">
-                        <a class="cat-overlay text-white text-decoration-none" href="visa.html">
+                        <a class="cat-overlay text-white text-decoration-none" href="visit-visa.html">
                             <h4 class="text-white font-weight-medium">Visas</h4>
                             <!-- <span>100 Courses</span> -->
                         </a>
@@ -404,7 +404,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="rounded overflow-hidden mb-2">
+                    <!-- <div class="rounded overflow-hidden mb-2">
                         <img class="img-fluid" src="img/stock-market.jpg" alt="">
                         <div class="bg-secondary p-4">
                             <div class="d-flex justify-content-between mb-3">
@@ -420,7 +420,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <!-- <div class="rounded overflow-hidden mb-2">
