--- a/study-in-singapore.html
+++ b/study-in-singapore.html
@@ -177,23 +177,34 @@
                             Overall, studying in Singapore is a fantastic opportunity for students who are looking to
                             gain a world-class education, experience a new culture, and prepare for a successful career
                             in the global marketplace.</p>
-                        <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
-                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
-                        <p>If you are interested in a career that combines finance with technology, then pursuing
-                            training in both the stock market and software development could be a great choice for you.
-                            This combination of skills can be valuable in positions that involve designing and
-                            implementing financial software, managing investment portfolios, or developing trading
-                            algorithms.
-                            To become proficient in both areas, you will need to have a strong foundation in computer
-                            science and programming languages, as well as a deep understanding of the stock market and
-                            financial concepts. You can start by taking courses obtaining certifications in both areas,
-                            or pursuing a degree that combines these subjects.
+                        <h2 class="mb-4">Why Study in Singapore ?</h2>
+                        <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/about-singapore.jpg"
+                            alt="Image">
+                        <p class="">Singapore is a small island nation located in Southeast Asia that has gained a
+                            reputation as
+                            a world-class education hub. There are several reasons why students from around the globe
+                            choose to study in Singapore.
+                            Firstly, Singapore has a strong education system with highly respected universities and
+                            institutions. The country consistently ranks high in global education rankings, and its
+                            universities are recognized for their academic excellence, research capabilities, and
+                            innovative teaching methods.
+                            Secondly, Singapore is a multicultural and cosmopolitan city-state that offers a diverse and
+                            rich cultural experience. Students can immerse themselves in a blend of cultures, customs,
+                            and languages while studying in Singapore. This international exposure can broaden their
+                            horizons and enhance their global perspectives.
                         </p>
-                        <p>As you progress in your career, you may find that having expertise in both the stock market
-                            and software development can open up new opportunities and allow you to make a greater
-                            impact in your field. With the right training and dedication, you can build a successful
-                            career that allows you to utilize your skills and knowledge to make a positive difference in
-                            the world.</p>
+                        <p>Thirdly, Singapore is a safe and secure country with a low crime rate. This provides a sense
+                            of security for students, making it an ideal destination to study abroad. The country's
+                            efficient public transport system and well-developed infrastructure also make it easy for
+                            students to navigate the city and explore its attractions.
+                            Lastly, Singapore is a hub for business and innovation, making it an ideal destination for
+                            students interested in entrepreneurship and start-ups. The country's strong economy,
+                            favorable business environment, and supportive government policies create opportunities for
+                            students to gain valuable experience and make connections with like-minded individuals.
+                            All in all, studying in Singapore offers students a unique and rewarding experience that can
+                            enhance their academic and personal growth.
+                        </p>
+
                     </div>
 
                     <!-- Comment List -->
@@ -356,6 +367,180 @@
                         </form>
                     </div>
                 </div>
+
+                <div class="col-lg">
+                    <div class="mb-4">
+                        <div class="text-center mb-5">
+                            <h2 class="mb-4">Singapore Culture</h2>
+                            <img class="img-fluid rounded w-20 float-left mr-4 mb-3" src="img/Singapore-culture.jpg"
+                                alt="Image">
+                            <p class="">Singapore is a melting pot of cultures, with a diverse range of ethnicities such
+                                as Chinese, Malay, Indian, and Eurasian. This diversity is reflected in the country's
+                                culture, cuisine, and festivals.
+                                One of the hallmarks of Singapore's culture is its food. Singapore is known for its
+                                hawker centres, which offer a wide range of affordable and delicious local dishes. From
+                                the famous chilli crab to the savoury laksa, Singaporean cuisine is a fusion of flavours
+                                that will tantalize your taste buds.
+                            </p>
+                            <p>Another aspect of Singapore's culture is its festivals. The country celebrates a variety
+                                of festivals throughout the year, such as Chinese New Year, Deepavali, and Hari Raya.
+                                These festivals are a time for families and friends to come together and celebrate their
+                                culture and traditions.
+                                Singapore is also known for its clean and green environment. The country's government
+                                has implemented strict laws and regulations to ensure that the city remains clean and
+                                sustainable. This has led to the creation of beautiful parks and gardens throughout the
+                                city, such as Gardens by the Bay and the Botanic Gardens.
+                                Overall, Singapore's culture is a unique blend of traditions, cuisines, and values that
+                                make it a vibrant and dynamic place to live and visit.
+                            </p> 
+                        </div>
+                    </div>
+                </div>
+                <!--course start-->
+                <div class="container-fluid py-5">
+                    <div class="container pt-5 pb-3">
+                        <div class="text-center mb-5">
+                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Courses</h5>
+                            <h1>Our Courses Details</h1>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/singapore/Diploma In Hospitality And Tourism Management.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5> Diploma in hospitality and tourism management</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/singapore/Diploma In Business And Technology Management.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Diploma In Business And Technology Management</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/singapore/Diploma In Retail And Supply Chain Management.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Diploma In Retail And Supply Chain Management</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/singapore/Post Graduation Diploma In Business Management.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Post Graduation Diploma In Business Management</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/singapore/Post Graduate Diploma In Hospitality (Cafe Management).jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Post Graduate Diploma In Hospitality (Cafe Management)</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/singapore/Post Graduate Diploma In Reatail And Supply Chain Management.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Post Graduate Diploma In Reatail And Supply Chain Management</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
+                                <div class="team-item rounded overflow-hidden mb-2">
+                                    <div class="team-img position-relative">
+                                        <img class="img-fluid" src="img/singapore/Advanced Diploma In Hospitality And Tourism Management.jpg" alt="">
+                                        <div class="team-social">
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                                    class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Advanced Diploma In Hospitality And Tourism Management</h5>
+                                        <p class="m-0"></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- course End -->
                 <!-- Team Start -->
                 <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
