--- a/index.html
+++ b/index.html
@@ -335,14 +335,15 @@
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
-                            <a class="h5" href="">Web design & development courses for beginner</a>
-                            <div class="border-top mt-4 pt-4">
+                            <!-- <a class="h5" href="">Web design & development courses for beginner</a> -->
+                            <h5>Web Design & Development Courses for Beginner</h5>
+                            <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
                                     <h5 class="m-0"></h5>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -354,14 +355,15 @@
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
-                            <a class="h5" href="">Java Full-Stack Course in Core & Advanced Java</a>
-                            <div class="border-top mt-4 pt-4">
+                            <h5>Java Full-Stack Course in Core & Advanced Java</h5>
+                            <!-- <a class="h5" href="">Java Full-Stack Course in Core & Advanced Java</a> -->
+                            <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
                                     <h5 class="m-0"></h5>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -373,14 +375,15 @@
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
-                            <a class="h5" href="">Data Science With Python</a>
-                            <div class="border-top mt-4 pt-4">
+                            <h5>Data Science With Python</h5>
+                            <!-- <a class="h5" href="">Data Science With Python</a> -->
+                            <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
                                     <h5 class="m-0"></h5>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -392,14 +395,15 @@
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
-                            <a class="h5" href="">Data Analytics With Python & Sql </a>
-                            <div class="border-top mt-4 pt-4">
+                            <h5>Data Analytics With Python & Sql</h5>
+                            <!-- <a class="h5" href="">Data Analytics With Python & Sql </a> -->
+                            <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
                                     <h5 class="m-0"></h5>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -411,14 +415,15 @@
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
-                            <a class="h5" href="">Stock-Market</a>
-                            <div class="border-top mt-4 pt-4">
+                            <h5>Stock-Market</h5>
+                            <!-- <a class="h5" href="">Stock-Market</a> -->
+                            <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
                                     <h5 class="m-0"></h5>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -430,14 +435,15 @@
                                 <small class="m-0"><i class="fa fa-users text-primary mr-2"></i>25 Students</small>
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
-                            <a class="h5" href="">Tourism Packegs</a>
-                            <div class="border-top mt-4 pt-4">
+                            <h5>Tourism Packegs</h5>
+                            <!-- <a class="h5" href="">Tourism Packegs</a> -->
+                            <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
                                     </h6>
                                     <h5 class="m-0"></h5>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div> -->
                 </div>
