--- a/trading.html
+++ b/trading.html
@@ -131,14 +131,14 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-study" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-trading" style="margin-bottom: 90px;">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
-                <h3 class="display-4 text-white text-uppercase">Study</h3>
+                <h3 class="display-4 text-white text-uppercase">Trading</h3>
                 <div class="d-inline-flex text-white">
                     <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                    <p class="m-0 text-uppercase">Study</p>
+                    <p class="m-0 text-uppercase">Trading</p>
                 </div>
             </div>
         </div>
@@ -153,8 +153,8 @@
                 <div class="col-lg-8">
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/carousel-1.jpg" alt="Image">
+                        <h1 class="mb-5">MASTER TRADER PROGRAM.</h1>
+                        <img class="img-fluid rounded w-100 mb-4" src="img/course trading.jpg" alt="Image">
                         <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
                             oneself in a new culture, learn a new language, and gain a unique perspective on the world.
                             Additionally, studying abroad can enhance one's academic and professional prospects by
@@ -254,23 +254,23 @@
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In Singapore</a>
+                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Demat Account</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="study-in-cyprus.html" class="text-decoration-none h6 m-0">Study in Cyprus</a>
+                                <a href="study-in-cyprus.html" class="text-decoration-none h6 m-0">Basic To Advance Trading</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="study-in-france.html" class="text-decoration-none h6 m-0">Study in France</a>
+                                <a href="study-in-france.html" class="text-decoration-none h6 m-0">Every Week New Batch</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="study-in-ireland.html" class="text-decoration-none h6 m-0">Study in Ireland</a>
+                                <a href="study-in-ireland.html" class="text-decoration-none h6 m-0">Live Trading Practice</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
+                                <a href="" class="text-decoration-none h6 m-0">And More</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                         </ul>
