--- a/study-in-cyprus.html
+++ b/study-in-cyprus.html
@@ -130,7 +130,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-study" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-cyprus-study" style="margin-bottom: 90px;">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">Cyprus</h3>
@@ -138,6 +138,8 @@
                     <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
                     <p class="m-0 text-uppercase">Study</p>
+                    <i class="fa fa-angle-double-right pt-1 px-3"></i>
+                    <p class="m-0 text-uppercase">Cyprus</p>
                 </div>
             </div>
         </div>
