--- a/study-in-france.html
+++ b/study-in-france.html
@@ -130,7 +130,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-study" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-france-study" style="margin-bottom: 90px;">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">France</h3>
