--- a/study-in-singapore.html
+++ b/study-in-singapore.html
@@ -137,7 +137,8 @@
                 <div class="d-inline-flex text-white">
                     <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                    <p class="m-0 text-uppercase">Study</p>
+                    <p class="m-0 text-uppercase"><a class="text-white" href="">Study</a></p>
+                    </p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
                     <p class="m-0 text-uppercase">Singapore</p>
                 </div>
@@ -208,48 +209,6 @@
                         </p>
 
                     </div>
-
-                    <!-- Comment List -->
-                    <!-- <div class="mb-5">
-                        <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">3 Comments</h3>
-                        <div class="media mb-4">
-                            <img src="img/user.jpg" alt="Image" class="img-fluid rounded-circle mr-3 mt-1"
-                                style="width: 45px;">
-                            <div class="media-body">
-                                <h6>John Doe <small><i>01 Jan 2045 at 12:00pm</i></small></h6>
-                                <p>Diam amet duo labore stet elitr ea clita ipsum, tempor labore accusam ipsum et no at.
-                                    Kasd diam tempor rebum magna dolores sed sed eirmod ipsum. Gubergren clita aliquyam
-                                    consetetur sadipscing, at tempor amet ipsum diam tempor consetetur at sit.</p>
-                                <button class="btn btn-sm btn-secondary">Reply</button>
-                            </div>
-                        </div>
-                        <div class="media mb-4">
-                            <img src="img/user.jpg" alt="Image" class="img-fluid rounded-circle mr-3 mt-1"
-                                style="width: 45px;">
-                            <div class="media-body">
-                                <h6>John Doe <small><i>01 Jan 2045 at 12:00pm</i></small></h6>
-                                <p>Diam amet duo labore stet elitr ea clita ipsum, tempor labore accusam ipsum et no at.
-                                    Kasd diam tempor rebum magna dolores sed sed eirmod ipsum. Gubergren clita aliquyam
-                                    consetetur sadipscing, at tempor amet ipsum diam tempor consetetur at sit.</p>
-                                <button class="btn btn-sm btn-secondary">Reply</button>
-                                <div class="media mt-4">
-                                    <img src="img/user.jpg" alt="Image" class="img-fluid rounded-circle mr-3 mt-1"
-                                        style="width: 45px;">
-                                    <div class="media-body">
-                                        <h6>John Doe <small><i>01 Jan 2045 at 12:00pm</i></small></h6>
-                                        <p>Diam amet duo labore stet elitr ea clita ipsum, tempor labore accusam ipsum
-                                            et no at. Kasd diam tempor rebum magna dolores sed sed eirmod ipsum.
-                                            Gubergren clita aliquyam consetetur, at tempor amet ipsum diam tempor at
-                                            sit.</p>
-                                        <button class="btn btn-sm btn-secondary">Reply</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-
-
-
                 </div>
 
                 <div class="col-lg-4 mt-5 mt-lg-0">
@@ -282,23 +241,23 @@
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In
                                     Singapore</a>
-                                <span class="badge badge-primary badge-pill">150</span>
+                                <!-- <span class="badge badge-primary badge-pill">150</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-cyprus.html" class="text-decoration-none h6 m-0">Study in Cyprus</a>
-                                <span class="badge badge-primary badge-pill">131</span>
+                                <!-- <span class="badge badge-primary badge-pill">131</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-france.html" class="text-decoration-none h6 m-0">Study in France</a>
-                                <span class="badge badge-primary badge-pill">78</span>
+                                <!-- <span class="badge badge-primary badge-pill">78</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-ireland.html" class="text-decoration-none h6 m-0">Study in Ireland</a>
-                                <span class="badge badge-primary badge-pill">56</span>
+                                <!-- <span class="badge badge-primary badge-pill">56</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
-                                <span class="badge badge-primary badge-pill">98</span>
+                                <!-- <span class="badge badge-primary badge-pill">98</span> -->
                             </li>
                         </ul>
                     </div>
@@ -404,7 +363,7 @@
                         <div class=" text-align: justify mt-5">
                             <h4 class="mb-3">Singapore student pass application</h4>
                             <img class="img-fluid float-right rounded w-20 mr-4 mb-3" style="width: 40%; height: 500px;"
-                                src="img/Singapore-culture.jpg" alt="Image">
+                                src="img/singapore/singapore-visa.jpg" alt="Image">
                             <p>After receiving the confirmation letter of admission from a desired institute, students
                                 need to apply for a student pass to enter Singapore. Institutes in Singapore will file
                                 the Singapore student pass for Indian application on behalf of the student to Singapore
@@ -414,21 +373,23 @@
                             <h4 class="mb-3">Documents Required For Singapore Student Visa</h4>
                             <p>
                                 Singapore student pass requirements for Indian in same order as given hereunder:
-                                <ul>
-                                    <li>International student application form</li>
-                                    <li>Passport</li>
-                                    <li>One Passport size photo (less than 6 months old)</li>
-                                    <li>Visa application fee</li>
-                                    <li>Bank Statements – ORIGINAL for the last 28 days from all sponsors</li>
-                                    <li>Transcripts (Mark sheets -from 10th class till the last degree obtained)</li>
-                                    <li>Affidavit of Support to be given by the sponsor on Rs.20 stamp paper (non-judicial)</li>
-                                    <li>Work experience certificate</li>
-                                    <li>Fixed Deposit Receipts (if necessary)</li>
-                                    <li>Bank loan sanction letter (if necessary)</li>
-                                </ul>
-                                Applicants are encouraged to apply at least 2 months before the commencement of the course.
+                            <ul>
+                                <li>International student application form</li>
+                                <li>Passport</li>
+                                <li>One Passport size photo (less than 6 months old)</li>
+                                <li>Visa application fee</li>
+                                <li>Bank Statements – ORIGINAL for the last 28 days from all sponsors</li>
+                                <li>Transcripts (Mark sheets -from 10th class till the last degree obtained)</li>
+                                <li>Affidavit of Support to be given by the sponsor on Rs.20 stamp paper (non-judicial)
+                                </li>
+                                <li>Work experience certificate</li>
+                                <li>Fixed Deposit Receipts (if necessary)</li>
+                                <li>Bank loan sanction letter (if necessary)</li>
+                            </ul>
+                            Applicants are encouraged to apply at least 2 months before the commencement of the course.
 
-If the required documents are not in the English language, officially translated versions, as well as copies in the original language, are required.
+                            If the required documents are not in the English language, officially translated versions,
+                            as well as copies in the original language, are required.
                             </p>
                         </div>
                     </div>
