--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <h5>Tourism Packegs</h5>
-                            <!-- <a class="h5" href="">Tourism Packegs</a> -->
+                             <a class="h5" href="">Tourism Packegs</a> -->
                             <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
@@ -445,7 +445,7 @@
                                 </div>
                             </div> -->
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
