--- a/study-in-schengen.html
+++ b/study-in-schengen.html
@@ -254,23 +254,23 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In Singapore</a>
-                                <span class="badge badge-primary badge-pill">150</span>
+                                <!-- <span class="badge badge-primary badge-pill">150</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-cyprus.html" class="text-decoration-none h6 m-0">Study in Cyprus</a>
-                                <span class="badge badge-primary badge-pill">131</span>
+                                <!-- <span class="badge badge-primary badge-pill">131</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-france.html" class="text-decoration-none h6 m-0">Study in France</a>
-                                <span class="badge badge-primary badge-pill">78</span>
+                                <!-- <span class="badge badge-primary badge-pill">78</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="study-in-ireland.html" class="text-decoration-none h6 m-0">Study in Ireland</a>
-                                <span class="badge badge-primary badge-pill">56</span>
+                                <!-- <span class="badge badge-primary badge-pill">56</span> -->
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
-                                <span class="badge badge-primary badge-pill">98</span>
+                                <!-- <span class="badge badge-primary badge-pill">98</span> -->
                             </li>
                         </ul>
                     </div>
